# multi-stage-phaser

./: CMakeLists.txt
resource/: mspeditor.uidesc
source/: apf.h  lfo.cpp  lfo.h  mspcids.h  mspcontroller.cpp  mspcontroller.h  mspentry.cpp  mspprocessor.cpp  mspprocessor.h  params.h  version.h
